# hypercoil

./: .gitignore  .gitmodules  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  conftest.py  long_description.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  doc.yml
doc/: _quarto.yml  _quartodoc.yml  index.qmd  vapormod.scss
doc/_scripts/: _pkgidx.yml  build.py
doc/_source/: _quarto.yml  _quartodoc.yml  vapormod.scss
doc/_source/conveyant/: _quartodoc.yml
doc/_source/entense/: _quartodoc.yml
doc/_source/gramform/: _quartodoc.yml
doc/_source/hypercoil/: _quartodoc.yml
doc/_source/hyve/: _quartodoc.yml
doc/_source/lytemaps/: _quartodoc.yml
doc/_source/nitrix/: _quartodoc.yml
doc/_source/paranox/: _quartodoc.yml
doc/conveyant/: _quartodoc.yml
doc/entense/: _quartodoc.yml
doc/gramform/: _quartodoc.yml
doc/hypercoil/: _quartodoc.yml
doc/hyve/: _quartodoc.yml
doc/lytemaps/: _quartodoc.yml
doc/nitrix/: _quartodoc.yml
doc/paranox/: _quartodoc.yml
docs/source/: conf.py  data.rst  diffprog.rst  engine.rst  eval.rst  examples.rst  functional.rst  index.rst  init.rst  installation.rst  loss.rst  modules.rst  nn.rst  overview.rst  portal.rst  viz.rst
downstream/data/: bids.py
downstream/doc/: hypercoil.data.bids.BIDSObjectFactory.rst  hypercoil.data.bids.fmriprep_references.rst  hypercoil.data.bids.rst  hypercoil.data.dataref.DataReference.rst  hypercoil.data.functional.general.rst  hypercoil.engine.accumulate.AccumulatingFunction.rst  hypercoil.engine.accumulate.Accumulator.rst  hypercoil.nn.recombinator.QueryEncoder.rst
downstream/workflows/: ninecoil.py
hypercoil/: __about__.py  __init__.py
hypercoil/data/: __init__.py  bids.py  collate.py  dataref.py  dataset.py  functional.py  grabber.py  hcp.py  neuro.py  pydra.py  transforms.py  variables.py  wds.py
hypercoil/engine/: __init__.py  accumulate.py  action.py  argument.py  axisutil.py  conveyance.py  docutil.py  ephemeral.py  noise.py  paramutil.py  report.py  schedule.py  sentry.py  state.py  terminal.py
hypercoil/eval/: __init__.py  atlas.py  denoise.py
hypercoil/examples/: synth.py
hypercoil/formula/: __init__.py  dfops.py  expression.py  grammar.py  imops.py  nnops.py  transforms.py
hypercoil/functional/: __init__.py  activation.py  cmass.py  connectopy.py  cov.py  crosshair.py  crosssim.py  domain.py  domainbase.py  fourier.py  graph.py  interpolate.py  kernel.py  linear.py  matrix.py  noise.py  noml.py  polynomial.py  resid.py  semidefinite.py  sparse.py  sphere.py  sylo.py  symmap.py  tsconv.py  utils.py  window.py
hypercoil/init/: __init__.py  atlas.py  atlasmixins.py  base.py  deltaplus.py  dirichlet.py  domain.py  domainbase.py  freqfilter.py  geomcompress.py  iirfilter.py  iirfilterbutforreal.py  laplace.py  mapparam.py  masked.py  mpbl.py  semidefinite.py  sylo.py  toeplitz.py
hypercoil/loss/: __init__.py  base.py  batchcorr.py  cmass.py  connectopy.py  determinant.py  dispersion.py  entropy.py  equilibrium.py  functional.py  hinge.py  jsdiv.py  modularity.py  mvkurtosis.py  nn.py  norm.py  scalarise.py  scheme.py  secondmoment.py  smoothness.py  symbimodal.py
hypercoil/neuro/: __init__.py  atlas.py  const.py  data.py  data_msc.py  datasets.py  synth.py
hypercoil/nn/: __init__.py  activation.py  atlas.py  confound.py  cov.py  freqfilter.py  iirfilter.py  interpolate.py  polyconv.py  recombinator.py  resid.py  select.py  semidefinite.py  spdnoise.py  svm.py  sylo.py  tsconv.py  vertcom.py  window.py
hypercoil/reg/: __init__.py  base.py  batchcorr.py  cmass.py  cmassref.py  determinant.py  dispersion.py  entropy.py  equilibrium.py  modularity.py  norm.py  scheme.py  secondmoment.py  smoothness.py  symbimodal.py
hypercoil/synth/: atlas.py  corr.py  denoise.py  filter.py  mix.py  svm.py
hypercoil/viz/: filter.py  flows.py  globe.py  netplot.py  parcelbm.py  plot.py  qcfc.py  surf.py  surfplot.py  surfutils.py  transforms.py  utils.py  volplot.py
hypercoil/workflows/: atlasbenchmark.py  atlasscaling.py  atlasspatial.py  atlassub.py  denoisebenchmark.py  entropycascade.py  entropycascadeSWAPR.py  filterscaling.py  ninecoil.py  nodiff.py  nodiffpara.py  sampling.py  selectminimal.py  spatialnulls.py  statedetect.py  timebytime.py
hypernova/: __init__.py
hypernova/data/: __init__.py  bids.py  coltransforms.py  confounds.py  dataref.py  dataset.py  expression.py  fc.py  functional.py  grabber.py  model.py  neuro.py  transforms.py  utils.py  variables.py
hypernova/engine/: block.py
hypernova/examples/: desc-confounds_timeseries.json  synth.py
hypernova/formula/: __init__.py  coltransforms.py  expression.py  fc.py  match.py  model.py  shorthand.py  transforms.py  utils.py
hypernova/functional/: __init__.py  activation.py  cov.py  crosshair.py  crosssim.py  domain.py  fourier.py  graph.py  matrix.py  noise.py  polynomial.py  semidefinite.py  sylo.py  symmap.py  symxfm.py
hypernova/init/: __init__.py  atlas.py  base.py  butterworth.py  deltaplus.py  iirfilter.py  laplace.py  semidefinite.py  toeplitz.py
hypernova/nn/: __init__.py  atlas.py  cov.py  freqfilter.py  polyconv.py  semidefinite.py  spdnoise.py
hypernova/reg/: __init__.py  norm.py  smoothness.py  symbimodal.py
hypernova/testdata/: desc-confounds_timeseries.tsv
src/hypercoil/: __init__.py
tests/engine/: test_argument.py  test_axisutil.py  test_noise.py
tests/formula/: test_dfops.py  test_imops.py
tests/functional/: test_cov.py  test_crosssim.py  test_fourier.py  test_graph.py  test_kernel.py  test_matrix.py  test_metrictensor.py  test_resid.py  test_semidefinite.py  test_sparse.py  test_sphere.py  test_symmap.py
tests/init/: test_atlas.py  test_base.py  test_freqfilterspec.py  test_mpbl.py
tests/loss/: test_functional.py  test_nn.py  test_scheme.py
tests/neuro/: test_data_msc.py  test_synth.py
tests/nn/: synth_lgmix.py  test_covnn.py  test_iirfilter.py  test_netatlas.py  test_netbp.py  test_netcov.py  test_netdenoise.py  test_netsylo.py  test_resid_nn.py  test_sylo_nn.py
tests/viz/: test_surfheminone.py  test_vol.py
(+695 files in other folders)
