[metadata]
url = https://github.com/rciric/hypercoil
author = PROJECT developers
author_email = rastko@stanford.edu
maintainer = PROJECT developers
maintainer_email = rastko@stanford.edu
description = Differentiable programming for neuroimaging analysis
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
version = 0.0.x-planning
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Framework :: Torch
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
python_requires = >= 3.7
install_requires =
    torch >= 1.11.0
    cvxpy >= 1.1.18
    cvxpylayers >= 0.1.4
    nibabel
test_requires =
    numpy >= 1.21.0
    pandas
    pingouin
    pytest
packages = find:

[flake8]
max-line-length = 79
