[metadata]
url = https://github.com/hypercoil/hypercoil
author = PROJECT developers
author_email = rastko@stanford.edu
maintainer = PROJECT developers
maintainer_email = rastko@stanford.edu
description = Differentiable programming for neuroimaging analysis
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache License 2.0
version = 0.1.0a0.dev0+prealpha
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Framework :: JAX :: Equinox
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
python_requires = >= 3.8
install_requires =
    jax >= 0.3.16
    equinox >= 0.7.1
    optax >= 0.1.3
    distrax >= 0.1.2
    numpy >= 1.22.4
    pandas >= 1.4.3
    nibabel >= 4.0.1
    scipy >= 1.9.0
    templateflow >= 0.8.1
    pyvista >= 0.36.1
    click
    seaborn
    requests
    matplotlib
    bs4
    lxml
test_requires =
    scikit-image
    pingouin
    pytest
    nilearn
    communities
    brainspace
packages = find:

[flake8]
max-line-length = 79
max-doc-length = 200
exclude =
    downstream

[tool:pytest]
norecursedirs=hypercoil/downstream
